tests/NormalTests/paczka1/fuzzy1/81629502.err
Error in line 5: A11 A898 81,8
Error in line 8: Jfutms31 A448 28,4
Error in line 9: UvpLuZWjlF A559 78,8
Error in line 13: UvpLuZWjlF A898 14,0
Error in line 12: Jfutms31 A898 54,3
Error in line 25: Ob8mIZHZh A11 23,0
